# big-bird-brain

./: MODEL_CLASS_DIAGRAM.md  README.md
app/: .editorconfig  .gitignore  angular.json  package.json
app/src/: index.html  main.ts  styles.scss
app/src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
app/src-tauri/migrations/: 0001_create_table_schemas.down.sql  0001_create_table_schemas.up.sql  0002_insert_base_bonuses.down.sql  0002_insert_base_bonuses.up.sql  0003_insert_base_bonuses_details.down.sql  0003_insert_base_bonuses_details.up.sql  0004_insert_base_birds.down.sql  0004_insert_base_birds.up.sql  0005_insert_base_bird_details.down.sql  0005_insert_base_bird_details.up.sql  0006_insert_base_bird_habitats.down.sql  0006_insert_base_bird_habitats.up.sql  0007_insert_base_bird_bonus_qualifications.down.sql  0007_insert_base_bird_bonus_qualifications.up.sql  0008_insert_base_bird_costs.down.sql  0008_insert_base_bird_costs.up.sql  0009_insert_base_round_goals.down.sql  0009_insert_base_round_goals.up.sql
app/src-tauri/rules/draft-phase/: level1.grl  level2.grl  level3.grl
app/src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  model.rs  rule_engine.rs  setup.rs
app/src-tauri/src/model/: bird.rs  bird_power.rs  bonus.rs  draft.rs  game_state.rs  goal.rs  habitat.rs  nest_type.rs  player_state.rs  resource.rs  round.rs  suggestion.rs
app/src-tauri/src/rule_engine/: draft_engine.rs  main_engine.rs
app/src/app/: app.component.css  app.component.html  app.component.ts  app.ts
