[package]
name = "big-bird-brain"
version = "0.1.0"
description = "A Wingspan Board Game Assistant Tauri App"
authors = ["Dušan Komadinović"]
edition = "2024"
rust-version = "1.95"

[lib]
name = "big_bird_brain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
anyhow = "1.0"
rust-rule-engine = { version = "1.20", features = ["backward-chaining", "streaming"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "macros"] }
tauri = { version = "2.11", features = [] }
tauri-plugin-log = "2.8"
tauri-plugin-opener = "2.5"
thiserror = "2.0"
