[package]
name = "big-bird-brain"
version = "0.1.0"
description = "A Wingspan Board Game Assistant Tauri App"
authors = ["Dušan Komadinović"]
edition = "2024"
rust-version = "1.95"

[lib]
name = "big_bird_brain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true # Compile binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust-rule-engine = { version = "1.20", features = ["backward-chaining", "streaming"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "chrono"] }
tauri = { version = "2.11", features = [] }
tauri-plugin-log = "2.8"
tauri-plugin-opener = "2.5"
thiserror = "2.0"
uuid = { version = "1.23", features= ["v4", "serde"] }
